server_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: my-server
  name: my-server
  namespace: default
spec:
  containers:
  - image: my_server
    imagePullPolicy: Never
    name: my-server
    ports:
      - containerPort: 5001
    resources:
      requests:
        memory: "128Mi"
        cpu: "500m"
      limits:
        memory: "256Mi"
        cpu: "1000m"
  dnsPolicy: ClusterFirst
status: {}
