ingress.yaml
# Create apple pod
kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple"
      resources:
        requests:
          memory: 1Gi
          cpu: "1"
        limits:
          memory: 1Gi
          cpu: "1"

---
# Create apple service
kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image

---
# Create banana pod
kind: Pod
apiVersion: v1
metadata:
  name: banana-app
  labels:
    app: banana
spec:
  containers:
    - name: banana-app
      image: hashicorp/http-echo
      args:
        - "-text=banana"
      resources:
        requests:
          memory: 1Gi
          cpu: "1"
        limits:
          memory: 1Gi
          cpu: "1"

---
# Create banana service
kind: Service
apiVersion: v1
metadata:
  name: banana-service
spec:
  selector:
    app: banana
  ports:
    - port: 5678 # Default port for image

# Now create ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations: # This is needed!
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /apple
          pathType: Prefix
          backend:
            service:
              name: apple-service
              port:
                number: 5678
  - http:
      paths:
        - path: /banana
          pathType: Prefix
          backend:
            service:
              name: banana-service
              port:
                number: 5678

  - http:
      paths:
        - path: /my-server(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: my-server-svc
              port:
                number: 5001
